--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/1.md
@@ -1,5 +1,12 @@
 # Bài 1: Giới thiệu Graph Theory
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
+
+<div class="videoZen">
+    <iframe width="640" height="480" src="https://www.youtube.com/embed/WzeRZbH_zSM?list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+Sau đây là lý thuyết mình co động lại (*không nhất thiết phải xem `Video`*)
 ## 1. Định nghĩa
 
 `Graph Theory` nghiên cứu các tính chất của `graph` là một tập các đối tượng gọi là các **đỉnh** (*nút*) nối với nhau bởi các **cạnh** (*cung*). 
