--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
@@ -1,114 +1,127 @@
 # Bài 2: Khái niệm `Graph Theory`
 
-## 1. Định nghĩa
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
+
+<div class="videoZen">
+    <iframe width="640" height="480" src="https://www.youtube.com/embed/0lN4BYvi9yE?list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+Sau đây là lý thuyết mình co động lại (*không nhất thiết phải xem `Video`*)
+## 1.Định nghĩa
 
 `Graph` là một cấu trúc rời rạc gồm các **đỉnh** và các **cạnh** nối các **đỉnh đó**
 
-> 🧚 Ký hiệu `G = (V, E)` , trong đó 
-> 
-> - `V` là tập **đỉnh** (`vertex`)
-> 
-> - `E ⊆ V ₓ V` là tập hợp các **cạnh** (`edge`)
+::: tip 💡 KÝ HIỆU
 
-Có tổng cộng `5` đồ thị : 
+`G = (V, E)`, trong đó : 
 
-- **Đơn** đồ thị (`Single Graph`)
+- `V` là tập **đỉnh** (`vertex`)
 
-- **Đa** đồ thị (`MultiGraph`)
+- `E ⊆ V ₓ V` là tập hợp các **cạnh** (`edge`)
+:::
 
-- **Giả** đồ thị (`Pseudo Graph`)
+::: warning ⚠️ LƯU Ý
 
-- **Đồ** thị có hướng (`Directed Graph`)
+Có tổng cộng 5 loại đồ thị : 
 
-- **Đa** đồ thị có hướng (`Directed MultiGraph`)
+1. **Đơn** đồ thị (`Single Graph`)
 
-## 2. Loại đồ thị
+2. **Đa** đồ thị (`MultiGraph`)
 
-### a. Định nghĩa
+3. **Giả** đồ thị (`Pseudo Graph`)
 
-| ![icons8-typed.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-52-10-icons8-typed.png) Loại | ![icons8-agree.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-50-icons8-agree.png) Định nghĩa (`G = (V, E)`)                                                                                             | ![icons8-object.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png) Mô hình                   |
-| ------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Đơn** đồ thị <br>(`Single Graph`)                                                                                      | Gồm một tập không rỗng `V` và một tập cạnh `E` là các cạnh không sắp thứ tự của các **đỉnh** phân biệt                                                                                                                                    | ![output-onlinepngtools (3).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-02-23-output-onlinepngtools%20(3).png) |
-| **Đa** đồ thị <br>(`MultiGraph`)                                                                                         | Gồm một tập các **đỉnh** `V`, một tập các **cạnh** `E` và một hàm `f` từ `E` tới `{{u, v}\|u, v ∈ V, u ≠ v}`<br>Các **cạnh** `e₁`, `e₂`<br>Gọi là **cạnh song song** (`parallel`) *hoặc* **cạnh bội** (`multiple`)<br>Nếu `f(e₁) = f(e₂)` | ![output-onlinepngtools (4).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-03-07-output-onlinepngtools%20(4).png) |
-| **Giả** đồ thị <br>(`Pseudo Graph`)                                                                                      | Gồm một tập các **đỉnh** `V` và một tập các **cạnh** `E` và một hàm `f` từ `E` tới `{{u, v}\|u, v ∈ V}`<br>Một **cạnh** là **khuyên** (`loop`) nếu<br>`f(e) = {u,u} = {u}` với đỉnh `u` nào đó                                            | ![output-onlinepngtools (5).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-03-58-output-onlinepngtools%20(5).png) |
-| **Đồ** thị có hướng<br> (`Directed Graph`)                                                                               | Gồm tập các **đỉnh** `V` và một tập các **cạnh** `E` là các cặp `có thứ tự` của các phần tử **thuộc** `V`<br>Các cạnh ở đây được gọi là **cung** (`arc`)                                                                                  | ![output-onlinepngtools (6).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-05-18-output-onlinepngtools%20(6).png) |
-| **Đa** đồ thị có hướng<br> (`Directed MultiGraph`)                                                                       | Gồm một tập các **đỉnh** `V` và một tập các **cạnh** `E` và một hàm `f` từ `E` tới `{u, v \|u,v ∈ V}`<br>Các cạnh `e₁` và `e₂` là các **cạnh bội** nếu `f(e₁) = f(e₂)`                                                                    | ![output-onlinepngtools (7).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-05-22-output-onlinepngtools%20(7).png) |
+4. **Đồ** thị có hướng (`Directed Graph`)
+  
+5. **Đa** đồ thị có hướng (`Directed MultiGraph`)
+:::
 
-### b. Tính chất
+## 2.Các loại đồ thị
 
-| ![icons8-typed.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-52-10-icons8-typed.png) Loại | Cạnh có hướng                                                                                                               | Cạnh bội                                                                                                                    | Khuyên                                                                                                                      |
-| ------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- |
-| **Đơn** đồ thị (`Single Graph`)                                                                                          | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       |
-| **Đa** đồ thị (`MultiGraph`)                                                                                             | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       |
-| **Giả** đồ thị (`Pseudo Graph`)                                                                                          | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) |
-| **Đồ** thị có hướng (`Directed Graph`)                                                                                   | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) | ![icons8-delete.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png)       | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) |
-| **Đa** đồ thị có hướng (`Directed MultiGraph`)                                                                           | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) | ![icons8-checkmark.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png) |
+### Định nghĩa
 
----
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-52-10-icons8-typed.png">Loại                   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-50-icons8-agree.png">Định nghĩa (`G = (V, E)`)                                                                                                                                                                                        | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png">Mô hình                                                                                                                                         |
+| ---------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Đơn** đồ thị         | Gồm một tập không rỗng `V` và một tập cạnh `E` là các cạnh không sắp thứ tự của các **đỉnh** phân biệt                                                                                                           | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-02-23-output-onlinepngtools%20(3).png"> |
+| **Đa** đồ thị          | - Gồm một tập các **đỉnh** `V`, một tập các **cạnh** `E` và một hàm `f` từ `E` <br>- Các **cạnh** `e₁`, `e₂`<br>- Gọi là **cạnh song song** (`parallel`) *hoặc* **cạnh bội** (`multiple`)<br>Nếu `f(e₁) = f(e₂)` | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-03-07-output-onlinepngtools%20(4).png"> |
+| **Giả** đồ thị         | - Gồm một tập các **đỉnh** `V` và một tập các **cạnh** `E` và một hàm `f` từ `E` tới `{u, v}` trong đó `u,v ∈ V`<br>- Một **cạnh** là **khuyên** (`loop`) nếu<br>`f(e) = {u,u} = {u}` với đỉnh `u` nào đó               | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-03-58-output-onlinepngtools%20(5).png"> |
+| **Đồ** thị có hướng    | - Gồm tập các **đỉnh** `V` và một tập các **cạnh** `E` là các cặp `có thứ tự` của các phần tử **thuộc** `V`<br>- Các cạnh ở đây được gọi là **cung** (`arc`)                                                     | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-05-18-output-onlinepngtools%20(6).png"> |
+| **Đa** đồ thị có hướng | - Gồm một tập các **đỉnh** `V` và một tập các **cạnh** `E` và một hàm `f` từ `E` tới `{u, v \|u,v ∈ V}`<br>- Các cạnh `e₁` và `e₂` là các **cạnh bội** nếu `f(e₁) = f(e₂)`                                       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-05-22-output-onlinepngtools%20(7).png"> |
 
-## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-53-44-tenor.gif" title="" alt="tenor.gif" width="65"> 3. Các mô hình đồ thị
+### Tính chất 
 
-| ![icons8-graph.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-53-23-icons8-graph.png) Đồ thị | ![icons8-object.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png) Mô hình                   | ![icons8-robot_2.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-53-08-icons8-robot_2.png) Ví dụ             |
-| -------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- |
-| Quen biết                                                                                                                  | ![output-onlinepngtools.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-54-30-output-onlinepngtools.png)           | Trên trái đất có hơn `6` tỉ **đỉnh** và có thể hơn tỉ tỉ **cạnh**                                                                         |
-| Ảnh hưởng                                                                                                                  | ![output-onlinepngtools (1).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-19-54-41-output-onlinepngtools%20(1).png) | **Đỉnh**: tác giả<br>**Cạnh:** `2` người viết chung bài báo<br>==> Đồ thị cộng tác (*2001*) có hơn `337000` **đỉnh** và `496200` **cạnh** |
-| Thi đấu vòng tròn                                                                                                          | ![output-onlinepngtools (2).png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-19-58-55-output-onlinepngtools%20(2).png) | **Đỉnh**: Đội tham gia thi đấu<br>Giữa `2` **đỉnh** tồn tại đúng `1` **cạnh**                                                             |
+| ![icons8typedpng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-52-10-icons8-typed.png) Loại | Cạnh có hướng                                                                                                             | Cạnh bội                                                                                                                  | Khuyên                                                                                                                    |
+| ---------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- |
+| **Đơn** đồ thị                                                                                      | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       |
+| **Đa** đồ thị                                                                                           | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       |
+| **Giả** đồ thị                                                                                  | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> |
+| **Đồ** thị có hướng                                                                                | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> |
+| **Đa** đồ thị có hướng                                                                         | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> |
 
----
 
-## <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-54-38-tenor.gif" alt="tenor.gif" width="50"> 4. Ví dụ bài tập
+## 3.Các loại mô hình đồ thị
 
-### Bài 1. Xác định đồ thị
 
-Xác định các loại đồ thị sau : 
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-53-23-icons8-graph.png"> Đồ thị | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png"> Mô hình                 | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-53-08-icons8-robot_2.png"> Ví dụ                |
+| ------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- |
+| Quen biết                                                                                                                | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-54-30-output-onlinepngtools.png">         | Trên trái đất có hơn `6` tỉ **đỉnh** và có thể hơn tỉ tỉ **cạnh**                                                                         |
+| Ảnh hưởng                                                                                                                | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-19-54-41-output-onlinepngtools%20(1).png"> | **Đỉnh**: tác giả<br>**Cạnh:** `2` người viết chung bài báo<br>==> Đồ thị cộng tác (*2001*) có hơn `337000` **đỉnh** và `496200` **cạnh** |
+| Thi đấu vòng tròn                                                                                                        | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-19-58-55-output-onlinepngtools%20(2).png"> | **Đỉnh**: Đội tham gia thi đấu<br>Giữa `2` **đỉnh** tồn tại đúng `1` **cạnh**                                                             |
 
-> Để làm được bài này cần mẹo của mình như sau : 
-> 
-> Ta phân ra có `khuyên` hay không  : 
-> 
-> - Nếu `Có` : **đơn** hoặc **đa**
->   
->   - Kiểm tra có `cạnh bội` không ?
->     
->     - Nếu `Có` ==> **đơn**
->     
->     - Nếu `Không` ==> **đa**
-> 
-> - Nếu `Không` : **gỉa** *hoặc* **có hướng** *hoặc* **đa có hướng**
->   
->   - Kiểm tra có **cạnh có hướng** không ?
->     
->     - Nếu `Có` ==> **đơn có hướng**  và **đa có hướng**
->       
->       - Kiểm tra có **cạnh bội** không ? 
->         
->         - Nếu `Có` ==> **đơn có hướng**
->         
->         - Nếu `Không` ==> **đa có hướng** 
->     
->     - Nếu `Không` ==> **giả**
+## 4.Bài tập ví dụ
 
-| ![icons8-object.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png) Mô hình                                                                                                        | ![icons8-solve.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-55-25-icons8-solve.png) Trả lời | ![icons8-why_quest.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-55-47-icons8-why_quest.png) Lý do |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- |
-| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-07-Screen_Shot_2021-06-15_at_20.23.45-removebg-preview.png" title="" alt="Screen_Shot_2021-06-15_at_20.23.45-removebg-preview.png" width="121"> | Đơn đồ thị                                                                                                                  | Không `cạnh có hướng`, `cạnh bội` và `khuyên`                                                                                     |
-| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-16-Screen_Shot_2021-06-15_at_20.22.37-removebg-preview.png" title="" alt="Screen_Shot_2021-06-15_at_20.22.37-removebg-preview.png" width="226"> | Đơn đồ thị có hướng                                                                                                         | Có `khuyên`, `cạnh có hướng`<br>Không `cạnh bội`                                                                                  |
-| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-24-Screen_Shot_2021-06-15_at_20.22.29-removebg-preview.png" title="" alt="Screen_Shot_2021-06-15_at_20.22.29-removebg-preview.png" width="162"> | Giả đồ thị                                                                                                                  | Có `khuyên`, `cạnh bội`<br>Không `cạnh có hướng`                                                                                  |
-| <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-11-Screen_Shot_2021-06-15_at_20.22.43-removebg-preview.png" alt="Screen_Shot_2021-06-15_at_20.22.43-removebg-preview.png" width="165"> | Đa đồ thị có hướng                                                                                                          | Có `cạnh có hướng`, `cạnh bội` và `khuyên`                                                                                        |
+### a.Xác định loại đồ thị
 
-### Bài 2. Xây dựng mô hình
+::: details MẸO GIẢI
 
-Xây dưng đồ thị ảnh hưởng cho các thành viên lãnh đạo của một công ty nếu : 
+Để làm được bài này cần mẹo của mình như sau :
+
+Ta phân ra có `khuyên` hay không :
+
+- Nếu `Có` : **đơn** hoặc **đa**
+  
+  - Kiểm tra có `cạnh bội` không ?
+    
+    - Nếu `Có` ==> **đơn**
+      
+    - Nếu `Không` ==> **đa**
+      
+- Nếu `Không` : **gỉa** *hoặc* **có hướng** *hoặc* **đa có hướng**
+  
+  - Kiểm tra có **cạnh có hướng** không ?
+    
+    - Nếu `Có` ==> **đơn có hướng** và **đa có hướng**
+      
+      - Kiểm tra có **cạnh bội** không ?
+        
+        - Nếu `Có` ==> **đơn có hướng**
+          
+        - Nếu `Không` ==> **đa có hướng**
+          
+    - Nếu `Không` ==> **giả**
+:::
+
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png"> Mô hình                                                            | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-55-25-icons8-solve.png"> Trả lời | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-55-47-icons8-why_quest.png"> Lý do |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-07-Screen_Shot_2021-06-15_at_20.23.45-removebg-preview.png"> | Đơn đồ thị                                                                                                                | Không `cạnh có hướng`, `cạnh bội` và `khuyên`                                                                                  |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-16-Screen_Shot_2021-06-15_at_20.22.37-removebg-preview.png"> | Đơn đồ thị có hướng                                                                                                       | Có `khuyên`, `cạnh có hướng`<br>Không `cạnh bội`                                                                               |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-24-Screen_Shot_2021-06-15_at_20.22.29-removebg-preview.png"> | Giả đồ thị                                                                                                                | Có `khuyên`, `cạnh bội`<br>Không `cạnh có hướng`                                                                               |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-24-11-Screen_Shot_2021-06-15_at_20.22.43-removebg-preview.png"> | Đa đồ thị có hướng                                                                                                        | Có `cạnh có hướng`, `cạnh bội` và `khuyên`                                                                                     |
+
+### b.Xây dựng mô hình
+
+Xây dưng đồ thị ảnh hưởng cho các thành viên lãnh đạo của một công ty nếu :
 
 - `Chủ tịch` có ảnh hưởng lên `giám đốc nghiên cứu và phát triển`, `giám đốc marketing`, `giám đốc điều hành`
-
+  
 - `Giám đốc nghiên cứu và phát triển` có ảnh hưởng lên `giám đốc điều hành`
-
+  
 - `Giám đốc Marketing` ảnh hưởng lên `giám đốc điều hành`
+  
+- **KHÔNG** ai có thể ảnh hưởng tới `trưởng phòng tài chính`
+  
+- `Trưởng phòng tài chính` không ảnh hưởng bất cứ ai
+  
 
-- **KHÔNG** ai có thể ảnh hưởng tới `trưởng phòng tài chính` 
+Dữ liệu : chủ tịch, giám đốc nghiên cứu & phát triển, giám đốc marketing, giám đốc điều hành, trưởng phòng tài chính
 
-- `Trưởng phòng tài chính` không ảnh hưởng bất cứ ai 
-
-Dữ liệu : chủ tịch, giám đốc nghiên cứu & phát triển, giám đốc marketing, giám đốc điều hành, trưởng phòng tài chính 
-
-![Screen Shot 2021-06-03 at 23.20.15.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/03-23-20-18-Screen%20Shot%202021-06-03%20at%2023.20.15.png)
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/03-23-20-18-Screen%20Shot%202021-06-03%20at%2023.20.15.png">
