--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
@@ -37,7 +37,7 @@ Có tổng cộng 5 loại đồ thị :
 
 ## 2.Các loại đồ thị
 
-### Định nghĩa
+### a.Định nghĩa
 
 | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-52-10-icons8-typed.png">Loại                   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-50-icons8-agree.png">Định nghĩa (`G = (V, E)`)                                                                                                                                                                                        | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-51-03-icons8-object.png">Mô hình                                                                                                                                         |
 | ---------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -47,9 +47,9 @@ Có tổng cộng 5 loại đồ thị :
 | **Đồ** thị có hướng    | - Gồm tập các **đỉnh** `V` và một tập các **cạnh** `E` là các cặp `có thứ tự` của các phần tử **thuộc** `V`<br>- Các cạnh ở đây được gọi là **cung** (`arc`)                                                     | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-05-18-output-onlinepngtools%20(6).png"> |
 | **Đa** đồ thị có hướng | - Gồm một tập các **đỉnh** `V` và một tập các **cạnh** `E` và một hàm `f` từ `E` tới `{u, v \|u,v ∈ V}`<br>- Các cạnh `e₁` và `e₂` là các **cạnh bội** nếu `f(e₁) = f(e₂)`                                       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-20-05-22-output-onlinepngtools%20(7).png"> |
 
-### Tính chất 
+### b.Tính chất 
 
-| ![icons8typedpng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/16-14-52-10-icons8-typed.png) Loại | Cạnh có hướng                                                                                                             | Cạnh bội                                                                                                                  | Khuyên                                                                                                                    |
+| Loại | Cạnh có hướng                                                                                                             | Cạnh bội                                                                                                                  | Khuyên                                                                                                                    |
 | ---------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- |
 | **Đơn** đồ thị                                                                                      | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       |
 | **Đa** đồ thị                                                                                           | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-07-icons8-checkmark.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-24-29-icons8-delete.png">       |
