--- a/docs/language/Excel/1/10.md
+++ b/docs/language/Excel/1/10.md
@@ -1,5 +1,13 @@
-# Chương 10: Các hàm nâng cao trong Excel
+# Chương 10: Các hàm nâng cao
 
 ## Bài 1: Hàm Dateif
 
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1O1tpoixNUQAXnU_BHRzyQwTu2giIubMf/preview" allow="autoplay"></iframe>
+</div>
+
 ## Bài 2: Hàm Sumif, Countif và Averageif
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1Swm-y1GnAE2ZKxMsXsVFWsLyAudw3QWz/preview" allow="autoplay"></iframe>
+</div>
