--- a/docs/language/Excel/1/2.md
+++ b/docs/language/Excel/1/2.md
@@ -1,5 +1,13 @@
-# Chương 2: Làm việc với 1 trang tính trong Excel
+# Chương 2: Làm việc với Excel
 
-## Bài 1: Tạo và làm việc với một Workbook
+## Bài 1: Tạo và làm việc với Workbook
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1aDaqd6nAiF_2x0TR7Ya8WXXMN8iy8XzR/preview" allow="autoplay"></iframe>
+</div>
 
 ## Bài 2: Tùy chỉnh các Option
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1HSivlbCoUfATmSDuyG1iXX7ew6Ri7cYv/preview" allow="autoplay"></iframe>
+</div>
