--- a/docs/language/Excel/1/9.md
+++ b/docs/language/Excel/1/9.md
@@ -1,3 +1,7 @@
-# Chương 9: Sử dụng biểu đồ trong Excel
+# Chương 9: Sử dụng biểu đồ
 
 ## Bài 1: Hướng dẫn sử dụng biểu đồ cơ bản
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1SlUfcZapwRvA1fa_BcneJg_jGLpDukER/preview" allow="autoplay"></iframe>
+</div>
