--- a/docs/language/Word/1/1.md
+++ b/docs/language/Word/1/1.md
@@ -3,5 +3,5 @@
 ## Bài 1.Giới thiệu
 
 <div class="videoZen">
-    <iframe src="https://drive.google.com/file/d/10bAfyj2D1V6a1qFtN4fDz7WqYBgkE3Gs/preview" width="640" height="480" allow="autoplay"></iframe>
+    <iframe src="https://drive.google.com/file/d/10bAfyj2D1V6a1qFtN4fDz7WqYBgkE3Gs/preview" allow="autoplay"></iframe>
 </div>
