--- a/docs/language/Word/1/4.md
+++ b/docs/language/Word/1/4.md
@@ -3,137 +3,137 @@
 ## Bài 1: Sử dụng tabs để căn chỉnh, dóng hàng
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1nCyl19efRo77W0-bMhdVEVFvPzUK5L9u/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 2: Bài tập ôn về tabs
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1d5AK1RIGnR7EGiq0GG1M-jXNKKhkn43g/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 3: Điều chỉnh khoảng cách giữa các dòng và các đoạn văn
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1vjTzotQKiahtmzxASZt0rsIEtNPmF62c/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 4: Làm việc với danh sách và gạch đầu dòng 
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/191d2ixGOfO5oQfOaRHRjRVoOtZA33nyU/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 5: Sang trang mới, chức năng Page Break và Section Break
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1oEWVFoB-bajPbjElv3UmYM6x8mXr2p4C/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 6: Trình bày văn bản theo cột
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1bgBPLG32g3WppBktvCnCQPWSZIbpCJYU/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 7: Làm việc với Hyperlink và emails trong văn bản
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1olC-5qoXzHcgdnCAPhdBAGd9tdQJYNzq/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 8: Loại bỏ siêu liên kết trong văn bản
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/16VaWwJ6Y2xkiVTuQmnCYXMYoHwOFuFji/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 9: Dùng Shapes để vẽ biểu đồ trong Word
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1nsYPqh_IjLTVCLdo1tG7NwZrOKTXVSoj/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 10: Dùng Shapes để vẽ mặt rubic
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1khigY648iKIPoJxWLqzm0NKqsjxLXA30/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 11: Bài tập về Shapes
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/15nIS7V3juW4Uvft-C7T_EdVXNLvUyL_q/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 12: Sử dụng Textbox 
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1ONl9tJdmQF87WjE9twoCo4Ik7ltXWnFM/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 13: Sử dụng Wordart, chèn ngữ nghệ thuật
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1kK54Av2L-szlc6ST7VgxanqRzxiGBHtC/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 14: Sử dụng chức năng chèn ảnh
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1i_YAaBQCdoQBtQjRhZbvbvjwcTTkaOP3/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 15: Chèn tựa đề cho ảnh
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1kR_cffhls4UaR2HQhDXotVRj7gYDW0L5/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 16: Chèn chữ to đầu dòng - dropCap
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1hjHNXKCTK7pzfzc8iUbfdmsHGv4ncJKK/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 17: Làm việc với bảng biểu 
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1aqD-xgOL71owdv_7N1OB2pgVC4JXNFp5/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 18: Sử dụng header và footer trong Word
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1qHqsk6KTUaLfUd-UkwtCvOqyHpQz54k2/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 19: Đánh dấu số trang nâng cao
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1CidCbVRvLHkUF4StNKNXjjitjUMBm2dD/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 20: Tạo mục lục tự động 
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1Epux73Vr9CLOg6_3Z-FbryoVsCIjEf5w/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 21: Tính năng kiểm tra sự thay đổi trong quá trình làm việc
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1AUTJaPUO9IlHcd72K3SHVZ8BgCgSXKK8/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 22: Thêm watermark để đánh dấu tài liệu mật, copyright
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1IMCBF425yJM77XGoaqPWPQ5m19IRmXR8/preview" allow="autoplay"></iframe>
 </div>
 
 ## Bài 23: Sử dụng auto correct options để nhập dữ liệu nhanh hơn
 
 <div class="videoZen">
-
+    <iframe src="https://drive.google.com/file/d/1ctHfvkWae6L4tdG7mtLlWu2DXvxw1jBd/preview" allow="autoplay"></iframe>
 </div>
