--- a/docs/language/Excel/1/1.md
+++ b/docs/language/Excel/1/1.md
@@ -2,6 +2,18 @@
 
 ## Bài 1: Tổng quan về Excel 2010
 
-## Bài 2: Các phím tắt thông dụng trong Excel (Phần 1)
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1hpB3PLTVf5caaeIWc1ycSGgziuPexrlJ/preview" allow="autoplay"></iframe>
+</div>
 
-## Bài 3: Các phím tắt thông dụng trong Excel (Phần 2)
+## Bài 2: Các phím tắt thông dụng (P1)
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1VPuT4CuvpSUI8pJVxHIMsOXWMHBoDpg2/preview" allow="autoplay"></iframe>
+</div>
+
+## Bài 3: Các phím tắt thông dụng (P2)
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1qQxNfIomDhrn-CnShS12muF_BdOCYbJH/preview" allow="autoplay"></iframe>
+</div>
