--- a/docs/language/Excel/1/4.md
+++ b/docs/language/Excel/1/4.md
@@ -1,3 +1,7 @@
 # Chương 4: In và thiết lập trang
 
 ## Bài 1: In và các tùy chọn liên quan
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/12PuCCirOInVu0YC3W9aAa-mV_CDC_zGD/preview" allow="autoplay"></iframe>
+</div>
