--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/1.md
@@ -22,7 +22,7 @@ Sau đây là lý thuyết mình co động lại (*không nhất thiết phải
 
 Bài toán `bảy cây cầu Euler` (*bảy cầu ở `Königsberg`* ở Nga) bao gồm hai hòn đảo lớn nối với nhau và với đất liền với bảy cây cầu như sau :
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-17-52-00-Screen%20Shot%202021-06-15%20at%2017.51.50.png">
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-17-52-00-Screen%20Shot%202021-06-15%20at%2017.51.50.png" class="imageZen">
 
 ::: tip <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-17-50-26-icons8-thinking_face.png" width="25"> YÊU CẦU
 
