--- a/docs/course/system/c/1/11.md
+++ b/docs/course/system/c/1/11.md
@@ -1,3 +1,7 @@
-Chương 11. Tổng kết khóa học
+# Chương 11. Tổng kết khóa học
 
 ## Bài 109: Bài tập tổng hợp - Quản lý Sách
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1hREX0_PknhBeC8nNyIOBMKWylpbUz66w/preview" allow="autoplay"></iframe>
+</div>
