--- a/docs/course/system/c/1/4.md
+++ b/docs/course/system/c/1/4.md
@@ -1,25 +1,73 @@
-## Chương 4. Các vòng lặp
+# Chương 4. Các vòng lặp
 
 ## Bài 29: Vòng while
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1-EYfGRPUDLVSknhz1JyopPaHkZqTPdbG/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 30: Vòng do... while
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1kyUdDIKcg6oi4bgD29twtNxQBD7kOigg/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 31: Vòng for
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1G86xPmRChOCDGFv1q_pA_cYRqhZsmhld/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 32: Câu lệnh break
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1LkhgyU38lv8lh9jdbu_NT1jRdDCdhVf2/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 33: Câu lệnh continue
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1x8fDOVk4WpHZV60-W18yZDHIiVp-GnS6/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 34: Bàn về vòng lặp lồng nhau
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1rQKsZr5ZU4r5aeximJ9mRmf3gL90wKbG/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 35: Bài tập rèn luyện-Tính dãy số
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1bstre27B2_s1G27Jt22l-IDC-6lQMVyr/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 36: Bài tập rèn luyện-Số hoàn thiện
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1j7BBpRoRoHeg23RGnp2l0jk3dSX1Q3g_/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 37: Bài tập rèn luyện-Tổng các chữ số trong 1 số
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1-JjuwlC0bDD_i2NiolPNTDsHneoq86HK/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 38: Bài tập rèn luyện-Game đoán số
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1Ix4ey_QIilbr84uyisk0yx5dErBXmNTK/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 39: Bài tập rèn luyện-Vẽ Hình
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1JEQrR_0aZMy1qZ4bN2UhNVBImwPN4ApW/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 40: Các bài tập tự rèn luyện
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1kzuHc3sUbfy5pMS-qBHFco9W9nzhPwZd/preview" allow="autoplay"></iframe>
+</div>
