--- a/docs/course/system/c/1/5.md
+++ b/docs/course/system/c/1/5.md
@@ -2,24 +2,72 @@
 
 ## Bài 41: Khái niệm về mảng và cách khai báo
 
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1KN3zphvhX2uj3oY8vISf8bks1q0GStKI/preview" allow="autoplay"></iframe>
+</div>
+
 ## Bài 42: Truy suất và thao tác trên mảng 1 chiều
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/12HXRfJnHcp0OqPgqLzX38bdfS8VsQ11x/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 43: Tìm kiếm trên mảng 1 chiều
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1-d_8or1Kms8ShpFKvAfCCneG4hn32wFn/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 44: Sắp xếp mảng 1 chiều
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1mkJfEumgNLNz30sxfQoVxa2VP4k4P-PL/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 45: Cách khai báo mảng 2 chiều
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1EAHtkyYsljuPlAz7DwE7PrJKVF3kqAc-/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 46: Truy suất và thao tác trên mảng 2 chiều
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1-nUAWQkpgaEVrnDj_x8CSxCR1v77Y6o2/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 47: Bài tập - xử lý mảng 1
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1DhqWDO7ez9Um08TVU9hVRlxO0df1w8h_/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 48: Bài tập - xử lý mảng 2
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1koB_JluJFgitN7uvZXt4FyscDZXED2_X/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 49: Bài tập - xử lý mảng 3
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1o3BRGf61_KC_avqwh8YDNXomaAP-ew2s/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 50: Bài tập - xử lý mảng 4
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1RSI1JExmRts-EFH0rpVDbrSGoegp6Bce/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 51: Bài tập - xử lý mảng 5
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/17h1-kcoZ65Sx-ICmtVMXWNMUDgORCz3s/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 52: Các bài tập tự rèn luyện
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1s7N7U8FaRwo2v7zC71RCpljev9Kwy0rY/preview" allow="autoplay"></iframe>
+</div>
