--- a/docs/course/system/c/1/7.md
+++ b/docs/course/system/c/1/7.md
@@ -1,27 +1,79 @@
 # Chương 7. Con trỏ
  
 ## Bài 65: Khái niệm con trỏ & biến con trỏ
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1r_6e0evFCaTIUMkEmKSY9GDzoZDAYAkv/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 66: Các Toán tử con trỏ
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1oTwGO9ipcBkrfuIqDfbA7QovYpPwux0-/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 67: Các thao tác trên con trỏ
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1den6kRKCJiGVouZQDH5lP4EuHID_T0mm/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 68: Con trỏ void và con trỏ null
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1Y8C7KngpVC46ZC60oa7Z_qHNf584fSxF/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 69: Con trỏ và mảng
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1xhabkNKo9sKTsW9U4G8gQ3z6TJr1b-8l/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 70: Mảng Con trỏ
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/105Td8QSyau5-Ez7uGQBzR_pdsqrHe_EI/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 71: Tương quan giữa Mảng 2 chiều và con trỏ cấp 2
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/13vaBFJexf32tD36OW5ZOxdr8owRQye7O/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 72: Bài tập - con trỏ 1
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1vAbFqM2MwKQao7XMlhWyCfBXv0ZLJCoo/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 73: Bài tập - con trỏ 2
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/11oXeVc3sA0lowuR4TWD1AWbeQY1loMnr/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 74: Bài tập - con trỏ 3
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1yQAcx5IoMR2YpLYNzzumUcN1Ziu2cS86/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 75: Bài tập - con trỏ 4
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1wZ5rAp2mBx6Wlp9D_5FnOAUpqN35IOGE/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 76: Bài tập - con trỏ 5
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1A-SY9JhzVay_KfbBHE9iNiumFZ7fWC9l/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 77: Các bài tập tự rèn luyện
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1wBpzYJ05UvwCfv83CZU5KRvSkx7XUvwT/preview" allow="autoplay"></iframe>
+</div>
