--- a/docs/course/system/c/1/9.md
+++ b/docs/course/system/c/1/9.md
@@ -1,19 +1,55 @@
 # Chương 9. Kiểu dữ liệu có cấu trúc
  
 ## Bài 91: Khái niệm và cách khai báo cấu trúc
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1OWuaXS_ClXIsuXUkLnj4YptW8ueHV-b8/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 92: Truy cập các thành viên của biến cấu trúc
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1Hcmacp5cwzDEZ8QtMYYEP6RLqKTUr5E-/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 93: Lệnh gán cấu trúc
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1_2HLiav98QEB_xrZwjzjMNaL_dMjW64o/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 94: Mảng cấu trúc
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1hZyk3n7-Syyr0qbNK_afxyADWPdLGE55/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 95: Con trỏ cấu trúc
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1oiHgRoDlsm0ZjUHwX4kAh8ehy_UtcdhG/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 96: Bài tập - Cấu trúc nhân viên
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1p-2EymBo9sEW_p_iUTwdBaaRO28VIFzj/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 97: Bài tập - Cấu trúc điểm
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1aJr9khzVsCTmGeXZLmn0mVCqGoQ-81Nz/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 98: Bài tập - Cấu trúc phân số
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1uyF_xleitBwcE6nv8qtKdlKk_5gOT96X/preview" allow="autoplay"></iframe>
+</div>
  
 ## Bài 99: Các bài tập tự rèn luyện
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1tcwxIMwSauN8l5eel_sMsJUx-oMvXEeh/preview" allow="autoplay"></iframe>
+</div>
