--- a/docs/course/system/c/2/3.md
+++ b/docs/course/system/c/2/3.md
@@ -1,31 +1,13 @@
-# Chương 3. Khái niệm về OOP
+# Chương 3: Tìm kiếm 
 
-## Bài 5.Đối tượng và class
+## Bài 19. Linear Search
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/131umW30FAyTSfQwM2ZD98Pmur0IpTD10/preview" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1Vw2Q8WY1js1-uA2zTOXf38mwLlXRgFgc/preview" allow="autoplay"></iframe>
 </div>
 
-## Bài 6. Trừu tượng (Abstraction)
+## Bài 20. Binary Search
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1ohRIePPHeqBm4UUBl6CLrXJvVuHAW3ll/preview" allow="autoplay"></iframe>
-</div>
-
-## Bài 7. Đóng gói (Encapsulation ) 
-
-<div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/15ZhCr-ELE0tfyEHu0EjyBOIIF_HqdpFz/preview" allow="autoplay"></iframe>
-</div>
-
-## Bài 8. Kế thừa (Inheritance)
-
-<div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1nV-LrBd-tCnM6ywPhSflEep7GPcMK6-p/preview" allow="autoplay"></iframe>
-</div>
-
-## Bài 9. Đa hình (Polymorphism)
-
-<div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/16-zE03ztd1eFJoTmMTzggR6TiB2cMiE0/preview" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1hPZjvRTlNGLSNqfu3mJJze7iCx9LJkFb/preview" allow="autoplay"></iframe>
 </div>
