--- a/docs/course/system/c/2/1.md
+++ b/docs/course/system/c/2/1.md
@@ -1,19 +1,43 @@
-# Chương 1.Giới thiệu
+# Chương 1.Giới thiệu và ôn tập
 
-## Bài 1. Hướng dẫn học trên Udemy
+## Bài 1. Setup mọi thứ để bắt đầu 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/17a-0LeXLJzgBCqfJjQsuLeZGCchs08yZ/preview" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1C8S2wq2zc4d8cYly9I19DJf7RRzfzrtv/preview" allow="autoplay"></iframe>
 </div>
 
-## Bài 2. Hướng dẫn cài Visual Studio
+## Bài 2. Ôn tập lệnh điều kiện
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1x7UWG8rxrli8qOJlQXi3faSZApBL7B6M/preview" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/15Mc8t7gUyDJY_2zCY-pnWQMmK2RBh1bt/preview" allow="autoplay"></iframe>
 </div>
 
-## Bải 3. Tổng quan về Visual Studio
+## Bài 3. Ôn tập vòng lặp 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1-pNJanpbkvRi6ApwyJPeyIBUPgPneItS/preview" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1wSYfK3aVXuQDB8-6xf6GS3SPLUa011T3/preview" allow="autoplay"></iframe>
+</div>
+
+## Bài 4. Ôn tập hàm
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1T2-ub4Wd9XxrGj-FMD1QX6GLSGo4_V_X/preview" allow="autoplay"></iframe>
+</div>
+
+## Bài 5. Ôn tập Con trỏ
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/17gYwbQb7Gkzolu9RbnZlA_w3EIsOoLCi/preview" allow="autoplay"></iframe>
+</div>
+
+## Bài 6. Ôn tập Mảng
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/16tfmK_9-_hvyntWIh0YBrVeWY7tVF3Xi/preview" allow="autoplay"></iframe>
+</div>
+
+## Bài 7. Khái quát OOP
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/107WND6JzD0bje6ZArjXgJWxOu9-i4m6P/preview" allow="autoplay"></iframe>
 </div>
