--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
@@ -2,6 +2,61 @@
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
 
+::: warning ⚠️ LƯU Ý
+
+Xem video [bài trước](/course/CT175-Ly_thuyet_do_thi/Tailieu/6.md) và xem thêm video dưới đây
+:::
+
 <div class="videoZen">
   <iframe width="640" height="480" src="https://www.youtube.com/embed/-i1nmBj9WeI?list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+## 1. Duyệt theo chiều sâu (`DFS`)
+
+::: 🤔 Ý TƯỞNG
+
+Khởi điểm từ một đỉnh, đi theo các cạnh xa nhất có thể.
+:::
+
+Trở lại định sau của cạnh xa nhất, tiếp tục duyệt như trước cho tới đến đỉnh cuối cùng.
+
+> Ví dụ 
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/30-22-24-26-output-onlinepngtools%20(4).png" width="500">
+
+::: tip 💡 MẸO
+
+Được xuất phát từ đỉnh bất kỳ, nhưng nên chọn nhỏ nhất
+:::
+
+Chọn `a` ⇨ `b` ⇨ `c` ⇨ `g` ⇨ `d` ⇨ `e` ⇨ `f` ⇨ `h` (*nhỏ tới lớn*)
+
+*hoặc*
+
+Chọn `a` ⇨ `g` ⇨ `e` ⇨ `b` ⇨ `h` ⇨ `e` ⇨ `f` ⇨ `d` (*lớn tới nhỏ*)
+## 2. Duyệt theo chiều rộng (`BFS`)
+
+::: tip 🤔 Ý TƯỞNG
+
+Đinh "gần" ưu tiên thăm trước
+:::
+
+> Ví dụ
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/30-22-24-26-output-onlinepngtools%20(4).png" width="500">
+
+::: tip 💡 MẸO
+
+Được xuất phát từ đỉnh bất kỳ, nhưng nên chọn nhỏ nhất
+:::
+
+Chọn `a` ⇨ `b` ⇨ `c` ⇨ `g` ⇨ d ⇨ `h` ⇨ `e` ⇨ `f`
+
+*hoặc*
+
+Chọn `d` ⇨ `h` ⇨ `e` ⇨ `b` ⇨ `f` ⇨ `c` ⇨ `a` ⇨ `g`
+
+::: tip 💡 FACT
+
+Thực chất `BFS` theo cơ chế `Hàng đợi` còn `DFS` theo cớ chế `Ngăn Xếp`
+:::
